<resources>
    <string name="app_name">Faveo Helpdesk Community</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_client_list">ClientListActivity</string>
    <string name="title_activity_client_profile">ClientProfileActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_splash">Faveo</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_ticket_detail">TicketDetailActivity</string>

    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>

    <string name="title_activity_main">Faveo</string>
    <string name="create_ticket">Create ticket</string>
    <string name="inbox_tickets">Inbox</string>
    <string name="my_tickets">My tickets</string>
    <string name="unassigned_tickets">Unassigned tickets</string>
    <string name="closed_tickets">Closed tickets</string>
    <string name="trash_tickets">Trash</string>
    <string name="client_list">Client list</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="com.crashlytics.CrashSubmissionPromptTitle">
          Send Crash Report?</string>
    <string name="com.crashlytics.CrashSubmissionPromptMessage">
          Looks like we crashed! Please help us fix the problem
          by sending a crash report.</string>
    <string name="com.crashlytics.CrashSubmissionSendTitle">
          Send</string>
    <string name="com.crashlytics.CrashSubmissionAlwaysSendTitle">
          Always Send</string>
    <string name="com.crashlytics.CrashSubmissionCancelTitle">
          Don\'t Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="forgot_pw">Forgot Password?</string>
    <string name="url">Company URL</string>
    <string name="welcome">Welcome !</string>
    <string name="loading">LOADING...</string>
    <string name="inbox">INBOX</string>
    <string name="reply">Reply</string>
    <string name="internal_note">Internal Note</string>
    <string name="to">To</string>
    <string name="message">MESSAGE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone (Optional)</string>
    <string name="help_topics">HELP TOPICS</string>
    <string name="sla_plans">SLA PLANS</string>
    <string name="department">DEPARTMENT</string>
    <string name="subject">SUBJECT</string>
    <string name="priority">PRIORITY</string>
    <string name="submit">Submit</string>
    <string name="crash_reports">CRASH REPORTS</string>
    <string name="save">Save</string>
    <string name="last_response_date">LAST RESPONSE DATE</string>
    <string name="create_date">CREATED DATE</string>
    <string name="due_date">DUE DATE</string>
    <string name="source">SOURCE</string>
    <string name="ticket_list">Ticket list</string>
    <string name="logout">Log out</string>

</resources>
