<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".frontend.activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="10dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/community" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_200" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/create_ticket"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="22dp"
                    android:src="@drawable/create_ticket" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/create_ticket"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:id="@+id/ticket_list"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="22dp"
                    android:src="@drawable/ticket_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/ticket_list"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/inbox_tickets"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/inbox_tickets" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/inbox_tickets"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_tickets"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/my_ticket" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/my_tickets"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/unassigned_tickets"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/unassigned_ticket" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/unassigned_tickets"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/closed_tickets"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/closed_ticket" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/closed_tickets"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trash_tickets"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/trash_ticket" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/trash_tickets"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:id="@+id/client_list"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="22dp"
                    android:src="@drawable/client_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/client_list"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="22dp"
                    android:src="@drawable/settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="22dp"
                    android:src="@drawable/about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="22dp"
                    android:src="@drawable/organisation_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

